<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
        <LinearLayout
            android:id="@+id/header_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/avater"
                android:background="@drawable/avater_background"
                />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:orientation="vertical"
                android:layout_weight="1"
                android:paddingLeft="8dp"
                android:paddingTop="8dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2">
                <TextView
                    android:id="@+id/personal_page"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="http://github.com/swxca" />
                <TextView
                    android:layout_below="@+id/personal_page"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray"
                    android:layout_marginTop="5dp"
                    />
                </RelativeLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="11"
                            android:textSize="20sp"
                            android:gravity="bottom"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/my_topic"
                            android:textSize="14sp"
                            android:gravity="top"
                            android:padding="2dp"/>
                        
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="49"
                            android:textSize="20sp"
                            android:gravity="bottom"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/my_attention"
                            android:textSize="14sp"
                            android:gravity="top"
                            android:padding="2dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="93"
                            android:textSize="20sp"
                            android:gravity="bottom"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/attention_me"
                            android:textSize="14sp"
                            android:gravity="top"
                            android:padding="2dp"/>
                    </LinearLayout>


                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/desc_per_fragment"
            android:layout_below="@+id/header_layout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:maxLines="3"
            android:padding="10dp"
            android:text="新开的git,第一个项目准备高仿知乎Android客户端UI完整版,多多指教。"/>
            <LinearLayout
                android:id="@+id/agree_collect"
                android:layout_below="@+id/desc_per_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/agree_per"
                    android:layout_marginLeft="10dp"

                    android:layout_gravity="center_vertical"/>
                <TextView
                    android:text="292"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textSize="20sp"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>

        <LinearLayout
            android:layout_below="@+id/desc_per_fragment"
            android:layout_marginLeft="70dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/collection"
                android:layout_marginLeft="10dp"

                android:layout_gravity="center_vertical"/>
            <TextView
                android:text="157"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="13dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/all_trend"
                android:layout_alignParentLeft="true"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_marginLeft="7dp"
                android:textSize="11sp"/>

            <ImageView
                android:layout_width="10dp"
                android:layout_height="15dp"
                android:src="@drawable/arrow_icon"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="7dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/answer"
                android:layout_alignParentLeft="true"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_marginLeft="7dp"
                android:textSize="11sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="11"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textSize="11sp"
                android:layout_marginRight="20dp"/>

            <ImageView
                android:id="@+id/trend_arrow"
                android:layout_width="10dp"
                android:layout_height="15dp"
                android:src="@drawable/arrow_icon"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="7dp"/>

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/question"
                android:layout_alignParentLeft="true"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_marginLeft="7dp"
                android:textSize="11sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textSize="11sp"
                android:layout_marginRight="20dp"/>

            <ImageView
                android:layout_width="10dp"
                android:layout_height="15dp"
                android:src="@drawable/arrow_icon"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="7dp"/>

        </RelativeLayout>

    </LinearLayout>
        <LinearLayout
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="13dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/attention_column"
                    android:layout_alignParentLeft="true"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:layout_marginLeft="7dp"
                    android:textSize="11sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:textSize="11sp"
                    android:layout_marginRight="20dp"/>

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="15dp"
                    android:src="@drawable/arrow_icon"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="7dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/column"
                    android:layout_alignParentLeft="true"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:layout_marginLeft="7dp"
                    android:textSize="11sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:textSize="11sp"
                    android:layout_marginRight="20dp"/>

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="15dp"
                    android:src="@drawable/arrow_icon"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="7dp"/>

            </RelativeLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="13dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="我的微博入口"
                    android:layout_alignParentLeft="true"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:layout_marginLeft="7dp"
                    android:textSize="11sp"/>



                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="15dp"
                    android:src="@drawable/arrow_icon"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="7dp"/>

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="13dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="125dp"
                >
                <LinearLayout
                    android:id="@+id/star_linearlayout"
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_centerHorizontal="true"
                    >
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/star"
                    android:layout_centerInParent="true"/>
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/star"
                    android:layout_centerInParent="true"/>
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/star"
                    android:layout_centerInParent="true"/>
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/star"
                    android:layout_centerInParent="true"/>
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/star"
                    android:layout_centerInParent="true"/>
                </LinearLayout>
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="什么是友善度?"
                    android:textColor="@color/black"
                    android:textSize="11sp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="20dp"
                    android:layout_marginRight="30dp"/>





            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>